@@ -1,3 +1,9 @@
+2001-11-21  Gary Houston  <ghouston@arglist.com>
+
+	* Makefile.am (OMIT_DEPENDENCIES): removed, since it seems to be
+	obsolete.  autogen.sh says:
+	invalid unused variable name: `OMIT_DEPENDENCIES'
+
 2001-11-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* numbers.c (scm_divide):  Fix (/ 0).  Thanks to Keith Wright for
